# sfss

./: .env.example  CHANGELOG.md  Cargo.toml  TELEMETRY.md  build.rs  deny.toml  rust-toolchain.toml
.github/workflows/: build.yml
.next/: trace
benches/: autoupdate.rs  ref-matching.rs  searching.rs  serde.rs  url_parsing.rs
macros/src/: lib.rs
patches/instant/: Cargo.toml
patches/instant/src/: lib.rs
src/: commands.rs  config.rs  diagnostics.rs  errors.rs  float.rs  handlers.rs  limits.rs  logging.rs  main.rs  output.rs  validations.rs
src/commands/: app.rs  bucket.rs  cache.rs  checkup.rs  credits.rs  debug.rs  hook.rs  outdated.rs  search.rs  status.rs  telemetry.rs  update_alias.rs  virustotal.rs
src/commands/app/: cat.rs  cleanup.rs  download.rs  info.rs  list.rs  purge.rs  shims.rs  uninstall.rs
src/commands/bucket/: add.rs  update.rs
src/commands/cache/: list.rs
src/commands/debug/: sizes.rs
src/commands/outdated/: apps.rs  buckets.rs
src/logging/: panics.rs
src/models/: min.rs  status.rs
src/output/: colours.rs  consts.rs  structured.rs  truncate.rs
src/output/structured/: vertical.rs
src/progress/: render.rs
src/progress/render/: args.rs
src/validations/: config.rs
src/wrappers/: bool.rs  header.rs
