[package]
authors = ["Juliette Cordor <professional@maybejules.com>"]
description = "Stupid Fast Scoop Utils"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sfsu"
publish = true
repository = "https://github.com/winpax/sfsu"
version = "1.16.0"

[[bench]]
harness = false
name = "searching"

[[bench]]
harness = false
name = "ref-matching"

[[bench]]
harness = false
name = "serde"

[[bench]]
harness = false
name = "autoupdate"

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
debug = true
inherits = "release"
strip = "none"

[features]
beta = ["sprinkles-rs/beta"]
contexts = []
default = ["download", "contexts"]
download = ["sprinkles-rs/manifest-hashes"]
# Changes that fundamentally change the API are locked behind this feature flag
v2 = []

[dependencies]
anyhow = "1.0"
bat = { version = "0.24", default-features = false, features = ["regex-onig"] }
cfg-if = "1.0"
chrono = { version = "0.4", features = [
    "clock",
    "serde",
    "std",
], default-features = false }
clap = { version = "4.5", features = [
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
console = { version = "0.15", features = ["windows-console-colors"] }
crossterm = "0.28"
derive_more = { version = "1.0", features = ["deref_mut", "deref", "as_ref"] }
dialoguer = "0.11"
futures = "0.3"
heck = "0.5"
human-panic = "2.0"
itertools = "0.13"
konst = "0.3"
log = { version = "0.4", features = ["std"] }
open = "5.1"
parking_lot = "0.12"
prodash = { version = "29.0.0", features = [
    "render-line",
    "render-line-crossterm",
] }
quork = "0.8"
rand = "0.8.5"
ratatui = { version = "0.29", features = ["macros"] }
rayon = "1.10"
regex = "1.10"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
shadow-rs = "0.37"
sprinkles-rs = { version = "0.19", features = ["clap"] }
tokio = { version = "1.37", features = ["full"] }
vt3 = "0.7"
which = "7.0"
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }
windows-version = "0.1"
winreg = "0.52"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[build-dependencies]
contribs = { git = "https://github.com/winpax/contribs.git", version = "0.1" }
dotenv = "0.15"
git2 = "0.19"
shadow-rs = "0.37"
tokio = { version = "1.37", features = ["full"] }
toml_edit = "0.22"
winres = "0.1"
